--- a/app/views/pages/camion.html.erb
+++ b/app/views/pages/camion.html.erb
@@ -330,11 +330,64 @@
               </tr>
               <tr class="nymou">
                 <% if @truck.unicodueno != '' %><td class="cell-label"><b>Único dueño</b><br> <% if @truck.unicodueno == false %>No <% else %> Si <% end %></td> <% end %>
-                <td></td>
+                <td class="cell-label">
+                  <% if @truck.autocarpado  %>
+                      <b>Auto Carpado</b><br><%= @truck.autocarpado %>
+                  <% end %>
+                </td>
                 <td></td>
                 <td></td>
 
               </tr>
+              <%if @truck.sevendecontrailer == 'Si'%>
+                    <tr class="nymou">
+                        <td class="cell-label">
+                            <% if @truck.marcatrailer  %>
+                                <b>Marca Trailer</b><br><%= @truck.marcatrailer %>
+                            <% end %>
+                        </td>
+                        <td class="cell-label">
+                            <% if @truck.tipotrailer  %>
+                                <b>Tipo de Trailer</b><br><%= @truck.tipotrailer %>
+                            <% end %>
+                        </td>
+                       <td class="cell-label">
+                            <% if @truck.modelotrailer %>
+                                <b>Modelo Trailer</b></br><%= @truck.modelotrailer %>
+                            <% end %>
+                       </td>
+                       <td class="cell-label">
+                            <% if @truck.numeroejestrailer %>
+                                <b>Número de ejes del Trailer</b></br><%= @truck.numeroejestrailer %>
+                            <% end %>
+                       </td>
+                    </tr>
+              <%end %>
+              <% if @truck.type_truck_id ==2 %>
+                <tr class="mymou">
+                  <td class="cell-label">
+                    <% if @truck.marca_equipo_humedo_id  %>
+                        <b>Marca Eqipo humedo</b><br><%= MarcaEquipoHumedo.find(@truck.marca_equipo_humedo_id).name %>
+                    <% end %>
+                  </td>
+                  <td class="cell-label">
+                    <% if @truck.marca_volco_id  %>
+                        <b>Marca Volco</b><br><%= MarcaVolco.find(@truck.marca_volco_id).name %>
+                    <% end %>
+                  </td>
+                  <td class="cell-label">
+                    <% if @truck.capacidadmetrica  %>
+                        <b>Capacidad Metrica</b><br><%= @truck.capacidadmetrica %>
+                    <% end %>
+                  </td>
+                  <td class="cell-label">
+                    <% if @truck.cuantosmetroscubicos  %>
+                        <b>Metros Cubicos</b><br><%= @truck.cuantosmetroscubicos %>
+                    <% end %>
+                  </td>
+
+                </tr>
+              <%end%>
               </tbody>
             </table><!-- /.table .table-bordered -->
           </div><!-- /.table-responsive -->
