--- a/app/views/admin/trucks/edit.html.erb
+++ b/app/views/admin/trucks/edit.html.erb
@@ -33,68 +33,65 @@
 <%= form_for @truck, :url => admin_truck_path, :method=>'PATCH' do |f|  %>
 
 
-      <ul class="nav nav-tabs" role="tablist">
+    <ul class="nav nav-tabs" role="tablist">
         <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Paso 1</a></li>
         <li role="presentation"><a id="s" href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Paso 2</a></li>
-      </ul>
+    </ul>
 
-      <br/><br/>
+    <br/><br/>
 
-      <div class="tab-content">
+    <div class="tab-content">
         <div role="tabpanel" class="tab-pane active" id="home">
 
+            <div class="row">
 
+                <div class="col-md-12">
+                    <div class="form-group">
 
-          < class="row">
+                        <%= f.label :sub_truck_id, 'Sub tipo' %>
+                        <%= f.collection_select :sub_truck_id, SubTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
 
-            <div class="col-md-12">
-              <div class="form-group">
-
-                <%= f.label :sub_truck_id, 'Sub tipo' %>
-                <%= f.collection_select :sub_truck_id, SubTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
-
-              </div>
-            </div>
-
-
-
-            <div class="col-md-6">
-              <div class="form-group">
-
-                <%= f.label :nombre, 'Nombre de Vehiculo' %>
-                <%= f.text_field :nombre, :class =>'form-control'  %>
-              </div>
-            </div>
-
-            <div class="col-md-6">
-              <div class="form-group">
-                <%= f.label :brand_truck_id, 'Marca de camion' %>
-                <%= f.collection_select :brand_truck_id, BrandTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
-              </div>
-            </div>
-
-
-              <div class="col-md-6">
-                <div class="form-group">
-                  <%= f.label :modelo, 'Modelo' %>
-                  <%= f.text_field :modelo, :class =>'form-control'  %>
+                    </div>
                 </div>
-              </div>
 
-              <div class="col-md-6">
-                <div class="form-group">
-                  <%= f.label :referencia_id, 'Referencia' %>
-                  <%= f.collection_select :referencia_id, Referencia.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+                <div class="col-md-6">
+
+                    <div class="form-group">
+
+                        <%= f.label :nombre, 'Nombre de Vehiculo' %>
+                        <%= f.text_field :nombre, :class =>'form-control'  %>
+                    </div>
                 </div>
-              </div>
+
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <%= f.label :brand_truck_id, 'Marca de camion' %>
+                        <%= f.collection_select :brand_truck_id, BrandTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+                    </div>
+                </div>
 
 
-            <div class="col-md-6">
-              <div class="form-group">
-                <%= f.label :price, 'Precio' %>
-                <%= f.text_field :price, :class =>'form-control'  %>
-              </div>
-            </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <%= f.label :modelo, 'Modelo' %>
+                        <%= f.text_field :modelo, :class =>'form-control'  %>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <%= f.label :referencia_id, 'Referencia' %>
+                        <%= f.collection_select :referencia_id, Referencia.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+                    </div>
+                </div>
+
+
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <%= f.label :price, 'Precio' %>
+                        <%= f.text_field :price, :class =>'form-control'  %>
+                    </div>
+                </div>
 
 
             <div class="col-md-6">
