--- a/app/views/pages/micamionesedit.html.erb
+++ b/app/views/pages/micamionesedit.html.erb
@@ -560,119 +560,90 @@
 
 
                 <div class="row">
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <%= f.label :transmissions_truck_id, 'Marca transmision' %>
-                      <%= f.collection_select :transmissions_truck_id, TransmissionsTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <%= f.label :transmissions_truck_id, 'Marca transmision' %>
+                            <%= f.collection_select :transmissions_truck_id, TransmissionsTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+                        </div>
                     </div>
-                  </div>
 
-
-
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <%= f.label :capacidadcarga, 'Capacidad Carga' %>
+                            <%= f.text_field :capacidadcarga, :class =>'form-control'  %>
+                        </div>
+                    </div>
 
                 </div>
 
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <%= f.label :tipo_carroceria_id, 'Tipo carroceria' %>
+                            <%= f.collection_select :tipo_carroceria_id, TipoCarroceria.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+                        </div>
+                    </div>
 
-
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <%= f.label :marca_carroceria_id, 'Marca Carroceria' %>
+                            <%= f.collection_select :marca_carroceria_id, MarcaCarroceria.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+                        </div>
+                    </div>
+                </div>
 
 
                 <div class="row">
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <%= f.label :tipo_carroceria_id, 'Tipo carroceria' %>
-                      <%= f.collection_select :tipo_carroceria_id, TipoCarroceria.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <%= f.label :empresaafiliada, 'Empresa Afiliada' %>
+                            <%= f.text_field :empresaafiliada, :class =>'form-control'  %>
+                        </div>
                     </div>
-                  </div>
 
-
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <%= f.label :marca_carroceria_id, 'Marca Carroceria' %>
-                      <%= f.collection_select :marca_carroceria_id, MarcaCarroceria.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <%= f.label :marcacarpa, 'Marca Carga' %>
+                            <%= f.text_field :marcacarpa, :class =>'form-control'  %>
+                        </div>
                     </div>
-                  </div>
-
-
                 </div>
 
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <%= f.label :contracts_truck_id, 'Poliza' %>
+                            <%= f.collection_select :contracts_truck_id, ContractsTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <%= f.label :tipocupo, 'Tipo de Cupo' %>
+                            <%= f.text_field :tipocupo, :class =>'form-control'  %>
+                        </div>
+                    </div>
+                </div>
 
 
                 <div class="row">
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <%= f.label :empresaafiliada, 'Empresa Afiliada' %>
-                      <%= f.text_field :empresaafiliada, :class =>'form-control'  %>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label>
+                                <%= f.check_box :negociable  %> Negociable
+                            </label>
+                            <br/>
+                            <label>
+                                <%= f.check_box :motorreparado  %> Motor Reparado
+                            </label> <br/>
+                            <label>
+                                <%= f.check_box :unicodueno  %> Unico dueño
+                            </label>
+                            <br/>
+                        </div>
                     </div>
-                  </div>
-
-
-
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <%= f.label :marcacarpa, 'Marca Carga' %>
-                      <%= f.text_field :marcacarpa, :class =>'form-control'  %>
-                    </div>
-                  </div>
-
-
                 </div>
-
-
-
-
-
-
-
-
-
-
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <%= f.label :capacidadcarga, 'Capacidad Carga' %>
-                      <%= f.text_field :capacidadcarga, :class =>'form-control'  %>
-                    </div>
-                  </div>
-
-
-                </div>
-
-
-
-                <div class="row">
-                  <div class="col-md-3">
-                    <div class="form-group">
-
-
-                      <label>
-                        <%= f.check_box :negociable  %> Negociable
-                      </label>
-                      <br/>
-
-                      <label>
-                        <%= f.check_box :motorreparado  %> Motor Reparado
-                      </label> <br/>
-                      <label>
-                        <%= f.check_box :unicodueno  %> Unico dueño
-                      </label>
-                      <br/>
-
-
-
-                    </div>
-                  </div>
-
-
-
-
-
-                </div>
-
-
-
             <% end %>
-
-
 
             <!--buses 4-->
             <% if params[:v] == '4' %>
@@ -874,8 +845,6 @@
 
             <% end %>
 
-
-
             <!-- trailers-->
             <% if params[:v] == '5' %>
 
@@ -1006,59 +975,52 @@
 
             <% end %>
 
-
             <!--VANS-->
-
             <% if params[:v] == '6' %>
 
-
                 <div class="row">
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <%= f.label :motors_truck_id, 'Marca motor' %>
-                      <%= f.collection_select :motors_truck_id, MotorsTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <%= f.label :motors_truck_id, 'Marca motor' %>
+                            <%= f.collection_select :motors_truck_id, MotorsTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+                        </div>
                     </div>
-                  </div>
 
-
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <%= f.label :cilindrajecc, 'Cilindraje CC' %>
-                      <%= f.text_field :cilindrajecc, :class =>'form-control'  %>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <%= f.label :cilindrajecc, 'Cilindraje CC' %>
+                            <%= f.text_field :cilindrajecc, :class =>'form-control'  %>
+                        </div>
                     </div>
-                  </div>
-
-
                 </div>
 
 
-
-
                 <div class="row">
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <%= f.label :capacidadcarga, 'Capacidad Carga' %>
-                      <%= f.text_field :capacidadcarga, :class =>'form-control'  %>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <%= f.label :capacidadcarga, 'Capacidad Carga' %>
+                            <%= f.text_field :capacidadcarga, :class =>'form-control'  %>
+                        </div>
                     </div>
-                  </div>
 
                   <div class="col-md-6">
-                    <div class="form-group">
-                      <%= f.label :capacidadpasajeros, 'Capacidad pasajeros' %>
-                      <%= f.text_field :capacidadpasajeros, :class =>'form-control'  %>
-                    </div>
+                        <div class="form-group">
+                            <%= f.label :capacidadpasajeros, 'Capacidad pasajeros' %>
+                            <%= f.text_field :capacidadpasajeros, :class =>'form-control'  %>
+                        </div>
                   </div>
                 </div>
 
 
                 <div class="row">
-                  <div class="col-md-12">
-                    <label for=""> Dirección </label><br/>
+                    <div class="col-md-12">
+                        <label for=""> Dirección </label><br/>
 
-                    <%= f.radio_button :direccion, 'Si', :checked => ( :direccion== 'Si'? true:false) %> Hidraulica
+                        <%= f.radio_button :direccion, 'Si', :checked => ( :direccion== 'Si'? true:false) %> Hidraulica
 
-                    <%= f.radio_button :direccion, 'No', :checked => (:direccion=='No' ? true:false) %> Mecanica
-                    <br/><br/>
+                        <%= f.radio_button :direccion, 'No', :checked => (:direccion=='No' ? true:false) %> Mecanica
+
+                      <br/><br/>
                   </div>
                 </div>
 
@@ -1075,15 +1037,7 @@
                 </div>
 
 
-
-
-
-
             <% end %>
-
-
-
-
 
 
             <div class="row">
