--- a/app/views/shared/_type_services.html.haml
+++ b/app/views/shared/_type_services.html.haml
@@ -2,7 +2,7 @@
   - @toggle_search.each do |toggle|
     .widget-header
       %h4.widget-title
-        %a{:href => "/servicio-toggle/#{toggle[1]}"}
+        %a{:href => "/servicio-opciones/#{toggle[1]}"}
           = toggle[0].capitalize
           %i.fa.fa-times
 .side-menu.animate-dropdown.outer-bottom-xs
