--- a/app/views/pages/camiones.html.haml
+++ b/app/views/pages/camiones.html.haml
@@ -10,10 +10,9 @@
   .container
     .row.outer-bottom-sm
       .col-md-3.sidebar
-        =# render 'includes/eliminar'
         = render 'shared/type_trucks'
         .sidebar-module-container
-          =# render 'includes/buscadoravanzado'
+          = render "shared/buscadoravanzado_trucks"
       .col-md-9
         .search-result-container
           #myTabContent.tab-content
