se agrega busqueda avanzada en los camiones

--- a/app/views/shared/_buscadoravanzado_trucks.html.haml
+++ b/app/views/shared/_buscadoravanzado_trucks.html.haml
@@ -33,5 +33,5 @@
             %a.accordion-toggle.collapsed{"data-toggle" => "collapse", :href => "#avanzada"} Avanzada
           #avanzada.accordion-body.collapse{:style => "height: 0px;"}
             .accordion-inner
-              %ul=# render 'shared/form_search_extras'
+              %ul= render 'shared/form_search_trucks'
 = render partial: '/shared/banners'
