--- a/app/views/shared/_type_trucks.html.haml
+++ b/app/views/shared/_type_trucks.html.haml
@@ -2,7 +2,7 @@
   - @toggle_search.each do |toggle|
     .widget-header
       %h4.widget-title
-        %a{:href => "/repuesto-opciones/#{toggle[1]}"}
+        %a{:href => "/camion-opciones/#{toggle[1]}"}
           = toggle[0].capitalize
           %i.fa.fa-times
 .side-menu.animate-dropdown.outer-bottom-xs
@@ -22,4 +22,4 @@
                     %ul.links.list-unstyled
                       - tipo.sub_trucks.each do |subtipo|
                         %li
-                          %a{:href => "/camion-tipo/#{subtipo.id}"}= subtipo.name
+                          %a{:href => "/camion-tipo/#{tipo.id}/#{subtipo.id}"}= subtipo.name
