se agrega el hipervinculo para que se aqbra una nueva pestaña en misw anuncios

--- a/app/views/includes/_menu.html.haml
+++ b/app/views/includes/_menu.html.haml
@@ -30,7 +30,7 @@
                   %li.dropdown
                     %a{:href => "/tarifas"} Vende tu camión
                   %li.dropdown
-                    %a{:href => "/mi-cuenta"} Mis Anuncios
+                    %a{:href => "/mi-cuenta", :target => "_blank" } Mis Anuncios
                 .clearfix
       .col-xs-12.col-sm-12.col-md-6.top-search-holder{:style => "float:right"}
         .search-area
